--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,10 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgres
+  encoding: unicode
+
   pool: 5
-  timeout: 5000
 
 development:
   <<: *default
